--- a/localisation/BLM_l_english.yml
+++ b/localisation/BLM_l_english.yml
@@ -14,13 +14,17 @@
  recore_artura:0 "Solidify Control in the Arturan Shyres"
  recore_sss:0 "Solidify Control in Suisse Colony"
  
+ BLM_local_garrisons:0 "Local Garrisons"
+ BLM_prof_army:0 "Lemurian Defense Force"
+ 
+ 
  BLM_our_culture:0 "Our culture"
  BLM_our_culture_desc:0 "not finished"
  BLM_our_place:0 "Our place"
  BLM_our_place_desc:0 "not finished"
  BLM_government_reform:0 "Government reform"
- BLM_government_reform_desc:0 "The government was created by old British nobles with no regard for the people, we must fix this bureaucracy."
- BLM_land_reform:0 "Land reform"
+ BLM_government_reform_desc:0 "The government was created by old British nobles with no regard for the people, we must fix this bureaucracy of the nobles."
+ BLM_land_reform:0 "Land Reform"
  BLM_land_reform_desc:0 "A lot of land is in the hands of the nobles thanks to programs of the previous administrations, we must give some to the peasants to allow further development."
  BLM_local_garrisons:0 "Local Garrisons"
  BLM_local_garrisons_desc:0 "In order to better protect our land we must form local garrisons with training in its local areas."
@@ -28,7 +32,7 @@
  BLM_nobility_issue_desc:0 "The Nobility have been a fundamental part of forging British-Lemuria, from conquering land for the colony to establishing major towns and outposts. Now we must address their status as potential tools against the government."
  BLM_disband_the_ig:0 "Disband the I.G."
  BLM_disband_the_ig_desc:0 "The Imperial Garrison is something which dates back to the formation of the first British colonies, now it has become out-dated and serves more as a political tool of an old oppressive government."
- BLM_federal_sympathies:0 "Federal sympathies"
+ BLM_federal_sympathies:0 "Federal Sympathies"
  BLM_federal_sympathies_desc:0 "To further smoothen the transformation to a federation we must appoint new pro-federation officials and bring further benefits to federal sympathizers."
  BLM_second_anglosaxon_reforms:0 "Second Anglo-Saxon Reforms"
  BLM_second_anglosaxon_reforms_desc:0 "The Anglo-Saxon Reforms were devestating reforms which ravaged the country from 1893-1911. The era was known for its brutality against non-Anglo-Saxon and non-Anglish peoples, seeing them all as threats and barbarians in need of 'civilizing'. Now a great debate has started in the British-Lemurian parliment regarding further reforms."
