--- a/localisation/aml_parties_l_english.yml
+++ b/localisation/aml_parties_l_english.yml
@@ -41,4 +41,5 @@
  PRJ_fascism_party:0 "Religious Parties of Yohannia"
  PRJ_democratic_party:0 "IDPY"
  PRJ_democratic_party_long:0 "Independent Democratic Parties of Yohannia"
- PRJ_communism_party:0 "Yohannian Communist Party"
+ PRJ_communism_party:0 "YCP"
+ PRJ_communism_party_long:0 "Yohannian Communist Party"
