--- a/localisation/aml_state_names_l_english.yml
+++ b/localisation/aml_state_names_l_english.yml
@@ -284,6 +284,6 @@
  STATE_1084:0 "Sinaloa"
  STATE_1085:0 "Zacatecas"
  STATE_1086:0 "San Luis Potosí"
- STATE_1115:0 "Ubdngi"
+ STATE_1115:0 "Ubangi"
  STATE_1116:0 "Katanga"
  STATE_1117:0 "Marrah"
