--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -79,8 +79,8 @@
  PRJ_greater_yohannia_desc:0 "Many of the lands surrounding our borders historically belong to us. We must begin the process of returning them to their rightful owners."
  PRJ_annex_uganda:0 "Annex the Bugandan Lands"
  PRJ_annex_uganda_desc:0 "The Bugandan and Buayoro Kingdoms were tributaries to the Greater Yohannian Empire in the past, after their conquest by the British they have been oppressed. We shall integrate them into our empire to defend them from British depredations." 
- PRJ_annex_wakanda:0 "Reintegrate the Upper Provinces"
- PRJ_annex_wakanda_desc:0 "After the Britain ripped the Upper Provinces from our kingdom in 1902 our economy suffered terribly. With the Upper Provinces back in our possess it's time we reintegrate them." 
+ PRJ_annex_wakanda:0 "Reintegrate the Azania Provinces"
+ PRJ_annex_wakanda_desc:0 "After the Britain ripped the Azania Provinces from our kingdom in 1902 our economy suffered terribly. With the Azania Provinces back in our possess it's time we reintegrate them." 
  PRJ_annex_rift:0 "Reintegrate the Poqot Provinces"
  PRJ_annex_rift_desc:0 "The Poqot Provinces, once full of prosperous mines, were ripped from us by Britain in 1902 the people have been forced to endure terrible conditions. No more! They will be properly reintegrated into our kingdom."
  PRJ_annex_rawanda:0 "Annex the Old Kingdom of Rawanda"
