--- a/localisation/PRJ_l_english.yml
+++ b/localisation/PRJ_l_english.yml
@@ -169,7 +169,7 @@
  PRJ_client_palestine:0 "Kingdom of Palestine"
  PRJ_client_palestine_desc:0 "Home to many peoples of many different faiths, Palestine is located at the crossroads of the world. We must create a strong state there to protect the gate from Asia into Africa."
  PRJ_client_jordon:0 "Kingdom of Jordan"
- PRJ_client_jordon_desc:0 "The Eastern Deserts if the Levant require a local kingdom to properly administer them. Long years of European abuse and mistreatment have shown that foreigners will have trouble truly controlling the area."
+ PRJ_client_jordon_desc:0 "The Eastern Deserts of the Levant require a local kingdom to properly administer them. Long years of European abuse and mistreatment have shown that foreigners will have trouble truly controlling the area."
  PRJ_client_syria:0 "Kingdom of Damascus"
  PRJ_client_syria_desc:0 "Once a kingdom of culture, art and innovation, Damascus has been an important city for milennia. We will return Damascus to her rightful place, as an important, world-class city."
  PRJ_client_congo:0 "Kingdom of Zaire"
