Added Basidia, Fixes to Trinsuyin

--- a/localisation/TRS_l_english.yml
+++ b/localisation/TRS_l_english.yml
@@ -207,3 +207,38 @@
  TRS_increase_construction_slips_desc:1 "By further increasing the number of construction bays at each dockyard we can ensure our navy's supply of hulls will be never-ending."
  TRS_purchase_japanese_convoys:1 "Purchase Japanese Convoys"
  TRS_purchase_japanese_convoys_desc:1 "If we are to not only supply our own armies but export goods for the benefit of our nation we must have convoys. The Japanese have expressed a desire to deal with us to provide these needed ships."
+ TRS_neiwakxinguk:1 "Neiwakxinguk"
+ TRS_hong_ji_jin:1 "Hing Ji Jin"
+ TRS_yangwaar_xinzim_raapure:1 "Yangwaar Xinzim Raapure"
+ TRS_jingyao_hai_qanli:1 "Jingyao Hai Qanli"
+ TRS_nukwanzhi_ulantse:1 "Nukwanzhi Ulantse"
+ TRS_cheng_huan_du:1 "Cheng Huan Du"
+ TRS_silent_workhorse:1 "Maitsaa Lungwe"
+ TRS_war_industrialist:1 "Nu Paa Tsoa"
+ TRS_backroom_backstabber:1 "Humelu Antsaqi"
+ TRS_prince_of_terror:1 "Chi Wang Tsaa"
+ TRS_armaments_organizer:1 "Il Fung Beiwaar"
+ TRS_democratic_politician:1 "Uwakshin Yaswal"
+ TRS_fascist_demagogue:1 "Abanpei Xitsang"
+ TRS_communist_revolutionary:1 "Qi Gwai Nong"
+ TRS_grand_fleet_proponent:1 "Jutsai Huruban"
+ TRS_victory_through_airpower:1 "Nan Zhing Tseo"
+ TRS_rocket_scientist:1 "Uma Daar Bipin"
+ TRS_naval_theorist:1 "Imilang Lailei "
+ TRS_military_theorist:1 "Subung Deikwa"
+ TRS_army_chief_morale_2:1 "Yulung Tsaam"
+ TRS_army_chief_offensive_2:1 "Pogwan Yi Gwaang"
+ TRS_army_chief_drill_2:1 "Sugwak Hu Emsatsu"
+ TRS_army_chief_planning_2:1 "Utang Sai Taar"
+ TRS_navy_naval_air_defense_2:1 "Lo Bei Gwak"
+ TRS_navy_fleet_logistics_3:1 "Wiang Cho"
+ TRS_navy_chief_decisive_battle_3:1 "Inang Dengtse"
+ TRS_navy_chief_maneuver_3:1 "Suxi Qichao"
+ TRS_air_strategic_bombing_2:1 "Pewaknu Seng"
+ TRS_air_chief_old_guard:1 "Lingla Rengtsa"
+ TRS_air_strategic_bombing_1:1 "Pongtaa Hilama"
+ TRS_navy_screen_2:1 "Mungme Fa Fingluta"
+ TRS_army_regrouping_1:1 "Bisaam Tsu Dewaar"
+ TRS_navy_capital_ship_3:1 "Yutsaam Ge Bwatsai"
+ TRS_air_naval_strike_1:1 "Jisang Se Kwaraa"
+ TRS_navy_carrier_2:1 "Ungtse Qitsa Norongsa"
