--- a/localisation/replace/aml_countries_l_english.yml
+++ b/localisation/replace/aml_countries_l_english.yml
@@ -1,4 +1,16 @@
 ﻿l_english:
+ BSD_fascism:0 "Basidia"
+ BSD_fascism_DEF:0 "Basidia"
+ BSD_democratic:0 "Republic of Basidia"
+ BSD_democratic_DEF:0 "Republic of Basidia"
+ BSD_neutrality:0 "Basidia"
+ BSD_neutrality_DEF:0 "Basidia"
+ BSD_communism:0 "Peoples Republic of Basidia"
+ BSD_communism_DEF:0 "the Peoples Republic of Basidia"
+ BSD_fascism_ADJ:0 "Basidian"
+ BSD_democratic_ADJ:0 "Basidian"
+ BSD_neutrality_ADJ:0 "Basidian"
+ BSD_communism_ADJ:0 "Basidian"
  PRJ_fascism:2 "Unitary Yohannia"
  PRJ_fascism_DEF:2 "Unitary Yohannia"
  PRJ_democratic:0 "Yohannia"
