Characters and Localization

--- a/localisation/FMU_l_english.yml
+++ b/localisation/FMU_l_english.yml
@@ -313,4 +313,53 @@
  FMU_revolution_front:0 "Revolutionary Front"
  FMU_commie_spies:0 "Freiestaater Communist Agitators"
  ger_fmu_research:0 "Germanic Research Pact"
- FMU_manu_threat:0 "Freistaat Mu Annexed Manu!"
+ FMU_manu_threat:0 "Freistaaten von Mu Annexed Manu!"
+ FMU_H_Ganzer:0 "Heinrich Ganzer"
+ FMU_E_Austerlitz:0 "Emil Austerlitz"
+ FMU_J_Steinman:0 "Johann Steinman"
+ FMU_K_Ymir:0 "Konstantin Eichel"
+ FMU_Anslem_Guderian:0 "Anselm Guderian"
+ FMU_Uther_von_Rindige:0 "Uther von Rindige"
+ FMU_T_Degurachaff:0 "T. Degurechaff"
+ FMU_J_Artlet:0 "Ebbe Schulze"
+ FMU_L_Smith:0 "Reto Tiedemann"
+ FMU_F_Slade:0 "Eckehard Schulze"
+ FMU_C_Wagner:0 "Poldi Kraus"
+ FMU_A_Roth:0 "Edsel Wiegand"
+ FMU_G_Boehm:0 "Immanuel Beck"
+ FMU_W_Kuhn:0 "Waldheri Schmidt"
+ FMU_A_Wolff:0 "Meinard Kempf"
+ FMU_rocket_scientist:0 "Adelhard Denche"
+ FMU_nuclear_scientist:0 "Adalwolf Mayer"
+ FMU_close_air_support_proponent:0 "Reinhard Volk"
+ FMU_air_warfare_theorist:0 "Dederick Fabel"
+ FMU_dive_bomber_theorist:0 "Bernhard Meier"
+ FMU_naval_theorist:0 "Karsten Martell"
+ FMU_army_chief_organization:0 "Wim Sachs"
+ FMU_army_chief_drill:0 "Lanzo Holland"
+ FMU_army_chief_offensive:0 "Korbinian Werner"
+ FMU_army_chief_maneuver:0 "Hanz Larenz"
+ FMU_air_chief_ground_support:0 "Berend Schulte"
+ FMU_air_chief_all_weather:0 "Herrick Wagner"
+ FMU_army_infantry:0 "Rudolf Pohl"
+ FMU_army_logistics:0 "Rikert Esser"
+ FMU_air_close_air_support:0 "Wilfried Feldt"
+ FMU_air_bomber_interception:0 "Alrich Wolf"
+ FMU_navy_naval_air_defense:0 "Bertram Jäger"
+ FMU_navy_anti_submarine:0 "Alwin Rapp"
+ FMU_fortification_engineer:0 "Menno Lang"
+ FMU_armaments_organizer:0 "Jochem Wagner"
+ FMU_captain_of_industry:0 "Hansel Nagel"
+ FMU_war_industrialist:0 "Wilmar Hofmann"
+ FMU_communist_revolutionary:0 "Tielo Hahn"
+ FMU_democratic_reformer:0 "Gisfrid Vonnegut"
+ FMU_fascist_demagogue:0 "Eber Sorg"
+ FMU_backroom_backstabber:0 "Moritz Böhm"
+ FMU_silent_workhorse:0 "Albrecht Zimmermann"
+ FMU_smooth_talking_charmer:0 "Adelbert Ahlers"
+ FMU_anti_fascist_agent:0 "Konrad Simon"
+ FMU_monarchist_media_mogul:0 "Engelbert Franke"
+ FMU_economist:0 "Isaac Kiefer"
+ FMU_connected_citizen:0 "Waldemar Klossner"
+ FMU_liberal_journalist:0 "Gevehard Sommer"
+ FMU_head_of_intelligence:0 "Raban Weber"
