--- a/localisation/BLM_l_english.yml
+++ b/localisation/BLM_l_english.yml
@@ -146,3 +146,33 @@
  BLM_british_man_desc:0 "While British Lemuria has a distinct character as a dominion, we must reemphasize the inherent and essential 'British-ness' that is part of being British Lemurian. Our nation will only be the better for it."]
  BLM_final:0 "Federalization"
  BLM_final2:0 "Federalization"
+ BLM_Sir_A_M_Chaucer_II:0 "Sir Andrew Mercey Chaucer II"
+ BLM_Finley_Phillips:0 "Finley Phillips"
+ BLM_Rob_Anglow:0 "Robert Anglow"
+ BLM_Homeland_Peoples_Council:0 "Homeland Peoples Council"
+ BLM_George_Livingston_III:0 "George Livingston III"
+ BLM_army_entrenchment:0 "Roth Knight"
+ BLM_air_chief_reform:0 "Tibbot Wilkinson"
+ BLM_navy_chief_decisive_battle:0 "Andre Welch"
+ BLM_air_warfare_theorist:0 "Derry O. Chambers"
+ BLM_military_theorist:0 "Rudyard Sharp"
+ BLM_army_regrouping:0 "Ulysses Myers"
+ BLM_navy_chief_naval_aviation:0 "Shayne Hawkins"
+ BLM_air_chief_ground_support:0 "Murdoch Middleton"
+ BLM_air_bomber_interception:0 "Caleb White"
+ BLM_army_infantry:0 "Lennox Nichols"
+ BLM_army_chief_defensive:0 "Jaymie Griffiths"
+ BLM_army_chief_offensive:0 "Layton T. Saunders"
+ BLM_army_chief_maneuver:0 "Kipp R. Davies"
+ BLM_army_commando:0 "Travis Rogers"
+ BLM_captain_of_industry:0 "Seldon Haynes"
+ BLM_popular_figurehead:0 "Quinton W. Hughes"
+ BLM_quartermaster_general:0 "Trudord C. Carr"
+ BLM_backroom_backstabber:0 "Roni D. Wheeler"
+ BLM_silent_workhorse:0 "Elden Connolly"
+ BLM_smooth_talking_charmer:0 "Taron Bird"
+ BLM_war_industrialist:0 "Maximillian Andrew Matthews"
+ BLM_compassionate_gentleman:0 "Norvin E. Southerland"
+ BLM_fascist_demagogue:0 "Shannon P. McCarthy"
+ BLM_communist_revolutionary:0 "Edwin Bush"
+ BLM_democratic_reformer:0 "Keir Wilkins"
