--- a/localisation/MUU_l_english.yml
+++ b/localisation/MUU_l_english.yml
@@ -1,4 +1,37 @@
 ﻿l_english:
+#characters
+
+ MUU_Ollun_Necumejjil:0 "Ollun Necumejjil"
+ MUU_Nyel_Tsitlalli:0 "Nyel Tsitlalli"
+ MUU_Qijutsli_Tsipir:0 "Qijutsli Tsipir"
+ MUU_Iqajj_Donaquaq:0 "Iqajj Donaquaq"
+ MUU_iaod_milinjui:0 "Iaod Milinjui"
+ MUU_dayum_sohollo:0 "Dayum Sohollo"
+ MUU_umundr_modaqri:0 "Umundr Modaqri"
+ MUU_uajsun_unijum:0 "Uajsun Unijum"
+ MUU_dayum_tsipir:0 "Dayum Tsipir"
+ MUU_daqiryig_modaqri:0 "Daqiryig Modaqri"
+ MUU_naqfu_houmarka:0 "Naqfu Houmarka"
+ MUU_letut_tsitlalli:0 "Letut Tsitlalli"
+ MUU_hajjump_gahrijjeom:0 "Hajjump Gahrijjeom"
+ MUU_donaq_allalletli:0 "Donaq Allalletli"
+ MUU_zaqajj_ellismuri:0 "Zaqajj Ellismuri"
+ MUU_iqajj_fascollem:0 "Iqajj Fascollem"
+ MUU_tusi_jujjuru:0 "Tusi Jujjuru"
+ MUU_nalangqu_itlit:0 "Nalangqu Itlit"
+ MUU_davyeu_vumeqallu:0 "Davyeu Vumeqallu"
+ MUU_vallan_ellomu_saqatrusum:0 "Vallan Ellomu Saqatrusum"
+ MUU_daqdeq_a_sanduem:0 "Daqdeg A. Sanduem"
+ MUU_qijutsli_dorfusru:0 "Qijutsli Dorfusru"
+ MUU_gorump_sohollo:0 "Gorump Sohollo"
+ MUU_tucume_m_milinjui:0 "Tucume M. Milinjui"
+ MUU_silent_workhorse:0 "Gerjja I. Maqan"
+ MUU_war_industrialist:0 "Bauvij Qlatli"
+ MUU_compassionate_gentleman:0 "Hurum Danaj"
+ MUU_fascist_demagogue:0 "Tisam Tsillaq"
+ MUU_communist_revolutionary:0 "Urujjun Tallasaj"
+ MUU_democratic_reformer:0 "Gutrullat Ejjamsa"
+
  01_MUU_tt:0 "§gUnlocks decisions to develop Dustartajare's Industrial Complex \n§ "
  01_MUU_marsh:0 "§gUnlocks decisions to reclaim land in the Sea of Hadu's marshes \n§ "
  01_MUU_puppet:0 "§yAny minor communist country in Mu will join the Union as a puppet \n§ "
