--- a/localisation/KUM_l_english.yml
+++ b/localisation/KUM_l_english.yml
@@ -1,4 +1,41 @@
 ﻿l_english:
+ #characters 
+ KUM_H_Tamdrinetta:0 "Hivanasha Tamdrinetta"
+ KUM_P_T_Indrimeshna:0 "P. T. Indrimeshna"
+ KUM_S_Drumuvatali:0 "Sanshardrina Drumuvatali"
+ KUM_G_Norundenna:0 "Grinavartra Norundenna"
+ KUM_linggruta_handruvarti:0 "Linggruta Handruvarti"
+ KUM_amshanartha_inswagatal:0 "Pact"
+ KUM_silent_workhorse:0 "Pact"
+ KUM_war_industrialist:0 "Pact"
+ KUM_backroom_backstabber:0 "Pact"
+ KUM_prince_of_terror:0 "Pact"
+ KUM_armaments_organizer:0 "Pact"
+ KUM_democratic_politician:0 "Pact"
+ KUM_fascist_demagogue:0 "Pact"
+ KUM_communist_revolutionary:0 "Pact"
+ KUM_grand_fleet_proponent:0 "Pact"
+ KUM_victory_through_airpower:0 "Pact"
+ KUM_rocket_scientist:0 "Pact"
+ KUM_naval_theorist:0 "Pact"
+ KUM_military_theorist:0 "Pact"
+ KUM_army_chief_morale_2:0 "Pact"
+ KUM_army_chief_offensive_2:0 "Pact"
+ KUM_army_chief_drill_2:0 "Pact"
+ KUM_army_chief_planning_2:0 "Pact"
+ KUM_navy_naval_air_defense_2:0 "Pact"
+ KUM_navy_fleet_logistics_3:0 "Pact"
+ KUM_navy_chief_decisive_battle_3:0 "Pact"
+ KUM_navy_chief_maneuver_3:0 "Pact"
+ KUM_air_strategic_bombing_2:0 "Pact"
+ KUM_air_chief_old_guard:0 "Pact"
+ KUM_air_strategic_bombing_1:0 "Pact"
+ KUM_navy_screen_2:0 "Pact"
+ KUM_army_regrouping_1:0 "Pact"
+ KUM_navy_capital_ship_3:0 "Pact"
+ KUM_air_naval_strike_1:0 "Pact"
+ KUM_navy_carrier_2:0 "Pact"
+ 
  #Decisions
  develop_single_chakkrumivan:0 "Develop Iron Mines in Chakkrumivan"
  develop_repeatable_demistalavai:0 "Develop Steel Refineries in Demistalavai"
