--- a/localisation/TOD_l_english.yml
+++ b/localisation/TOD_l_english.yml
@@ -1,4 +1,51 @@
 ﻿l_english:
+#characters
+ TOD_dos_uno:0 "Claudio Lopez"
+ TOD_bufo_mufo:0 "Tristán C. Perez"
+ TOD_dos_tres:0 "Ryo R. Martínez"
+ TOD_abrir_cerrar:0 "Jaques Sanchez"
+ TOD_dino_dino:0 "Milorio Fernandez"
+ TOD_tino_tino:0 "Efraín M. Moreno"
+ TOD_mingo_pingo:0 "Ugo Torres"
+ TOD_uno_dos:0 "Leopoldo Gomez"
+ TOD_lucas_pucas:0 "Níxon Herrera"
+ TOD_seis_siete:0 "Julio Q. Olivier"
+ TOD_once_doce:0 "Fanuco Trujillo"
+ TOD_sino_sino:0 "Darián Marrero"
+ TOD_queso_diego:0 "Samsón Guálter Amante"
+ TOD_tres_dos:0 "Neper Martín"
+ TOD_zorro_toro:0 "Aldán Morales de Tavafaz"
+ TOD_quatro_tres:0 "Paulo Noringes"
+ TOD_diez_onze:0 "Celio T. Ramos"
+ TOD_toro_zorro:0 "Everesto Fontales"
+ TOD_ocho_nueve:0 "Enoch A. Silva"
+ TOD_manzana_queso:0 "Eberardo Morán"
+ TOD_go_diego:0 "Marco Dániel Gil"
+ TOD_rana_manzana:0 "Tancredo Alvarés"
+ TOD_cinco_seis:0 "Octavio Julián Garcia"
+ TOD_ieeeee_aaaa:0 "Payam Pablo Ufurete"
+ TOD_tres_quatro:0 "José María Reyes"
+ TOD_siete_ocho:0 "Adolfo Cabrera"
+ TOD_pino_pino:0 "Benjamín Moore"
+ TOD_cerrar_abrir:0 "Adalberto E. Armas"
+ TOD_manzana_diego:0 "Marcelino Cruces"
+ TOD_diego_diogo:0 "Felipe N. Medina"
+ TOD_seis_cinco:0 "Enzo Rivero"
+ TOD_inigo_pinigo:0 "Amadeo dos Santos"
+ TOD_mino_mino:0 "Afolabi Cerezo"
+ TOD_loro_poro:0 "Albino Bosmín"
+ TOD_quatro_cinco:0 "Manuelo Prat"
+ TOD_cinco_quatro:0 "Lorenzo Mezeta"
+ TOD_lino_lino:0 "Chéster Lozero"
+ TOD_rana_pana:0 "Raynoldo Días"
+ TOD_dos_porquerias:0 "Alcides B. Alcazar"
+ TOD_tuna_diego:0 "Augusto Samfor"
+ TOD_banana_diego:0 "Nasario Campos"
+ TOD_digo_digo:0 "Matías M. Mancoco"
+ TOD_queso_queso:0 "Elpidio Durán"
+ TOD_nueve_diez:0 "Severiano Celso de Fícher"
+ 
+#focuses
  TOD_start:1 "Organize the Government"
  TOD_start_desc:1 "Before we make any moves on the world stage we must ensure that we have prepared our government for the challenges ahead."
  TOD_cooperation:1 "Good Neighbors"
