--- a/localisation/replace/aml_loading_tips_l_english.yml
+++ b/localisation/replace/aml_loading_tips_l_english.yml
@@ -6,7 +6,7 @@
  LOADING_TIP_5:0 "\"As one places stones on a Go board, so have I maneuvered Trinsuyin. They shall serve us their new masters.\"\n - Japanese Emperor Showa" #Hoi4 does not recognise the weird o
  LOADING_TIP_6:0 "\"Praise the Lord and pass the ammunition!\"\n - Chaplain Forgy, USS New Orleans"
  LOADING_TIP_7:0 "\"If fighting is sure to result in victory, then you must fight!\"\n - Sun Tzu"
- LOADING_TIP_8:0 "\"No three things are as sure as French spirit, Atlantean cunning, and American unpredicatablity.\"\n - General Miles Dempsey"
+ LOADING_TIP_8:0 "\"No three things are as sure as French spirit, Atlantean cunning, and American unpredictablity.\"\n - General Miles Dempsey"
  LOADING_TIP_9:0 "\"For crying out loud, how I wish sometimes that my own men could be the ones at the end of my barrel.\"\n - General Angus Fritzroy"
  LOADING_TIP_10:0 "\"Crash and burn, at least in the first months of the war. I'm prepared to admit our tactics are inferior, but we shall catch up in no time.\"\n - Atlantean President Avaskanta Carras"
  LOADING_TIP_11:0 "\"Knives are eating utensils, but only until a fight breaks out at the table.\"\n - Old Atlantean proverb."
